Добавлена поддержка OCR tesseract